# portico-desktop

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  turbo.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/desktop-ui/: .prettierignore  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
apps/desktop-ui/src/: main.tsx  routeTree.gen.ts  styles.css
apps/desktop-ui/src/app/: providers.tsx  query-client.ts  router.tsx
apps/desktop-ui/src/lib/: feature-readiness.test.ts  feature-readiness.ts  formatters.test.ts  formatters.ts  i18n-react.tsx  i18n.test.ts  i18n.ts  markdown-docx.ts  markdown-export.test.ts  markdown-export.ts  maybe-auto-title-thread.ts  path-picker.test.ts  path-picker.ts  query-keys.test.ts  query-keys.ts  schemas.test.ts  schemas.ts  tauri-api.test.ts  tauri-api.ts  tauri-events.test.ts  tauri-events.ts  thread-title.test.ts  thread-title.ts  utils.test.ts  workspace-files-sync.ts
crates/app-memory/: Cargo.toml
crates/app-memory/src/: embedding.rs  instruction.rs  lib.rs  manager.rs  pattern.rs  rag.rs  rag_store.rs
crates/app-models/: Cargo.toml
crates/app-models/bindings/: ActiveModelSelection.ts  AgentDefinition.ts  AgentRun.ts  AgentRunStatus.ts  AppError.ts  ApprovalRequest.ts  ApprovalRequestId.ts  ApprovalRequestStatus.ts  ArtifactPreview.ts  Automation.ts  AutomationId.ts  AutomationTrigger.ts  BackgroundTask.ts  BackgroundTaskId.ts  BackgroundTaskStatus.ts  BrowserAction.ts  BrowserWindowId.ts  BrowserWindowInfo.ts  BuiltInAgent.ts  ContextSummary.ts  DesktopCapture.ts  DiagnosticsBundle.ts  DiagnosticsBundleId.ts  ExecutionContext.ts  FeatureCapabilities.ts  InstructionFile.ts  McpServerConfig.ts  McpTransport.ts  MemoryId.ts  MemoryItem.ts  MemoryScope.ts  Message.ts  MessageId.ts  MessageRole.ts  MigrationInfo.ts  ModelCapability.ts  ModelId.ts  ModelInfo.ts  ModelSelectionScope.ts  Notification.ts  (+40 more)
crates/app-models/src/: lib.rs
crates/app-plugins/: Cargo.toml
crates/app-plugins/src/: lib.rs  mcp.rs  registry.rs
crates/app-runtime/: Cargo.toml
crates/app-runtime/bindings/: AgentRunId.ts  AgentRunStatus.ts  Artifact.ts  RuntimeEvent.ts  ThreadId.ts
crates/app-runtime/migrations/: 0001_create_workspaces.sql  0002_create_threads.sql  0003_create_agent_runs.sql  0004_create_run_events.sql  0005_create_artifacts.sql  0006_create_approval_requests.sql  0007_create_provider_configs.sql  0008_create_model_infos.sql  0009_create_usage_records.sql  0010_create_audit_log.sql  0011_workspace_allowed_paths.sql  0012_create_worktrees.sql  0013_create_memories.sql  0014_create_rag_chunks.sql  0015_create_plugins.sql  0016_create_skills.sql  0017_create_mcp_servers.sql  0018_create_subagents.sql  0019_create_background_tasks.sql  0020_create_automations.sql  0021_create_notifications.sql  0022_update_approval_requests.sql  0023_add_rag_provider_columns.sql  0024_create_messages.sql  0025_assistant_message_idempotency.sql  0026_system_message_idempotency.sql  0027_workspace_root_unique.sql  0028_active_model_health_snapshot.sql  0029_durable_tool_invocations.sql  0030_agent_checkpoints.sql  0031_add_plugin_host_capabilities.sql  0032_workflow_patterns_and_orchestrations.sql  0033_raise_provider_http_timeout.sql
crates/app-runtime/src/: approval_broker.rs  audit_logger.rs  context.rs  events.rs  executor.rs  lib.rs  notification_center.rs  provider_registry.rs  repo_root_provider.rs  runner.rs  safe_tools.rs  storage.rs  task_queue.rs  tool_execution.rs  workspace.rs  worktree.rs
crates/app-runtime/tests/: approval_broker.rs  conversation_recovery.rs  policy_gate.rs  safe_tool_golden_path.rs  tool_invocation_storage.rs
crates/app-security/: Cargo.toml
crates/app-security/src/: audit.rs  command.rs  lib.rs  network.rs  permission.rs  redaction.rs  secrets.rs
crates/app-tools/: Cargo.toml
crates/app-tools/src/: filesystem.rs  git.rs  lib.rs  terminal.rs
crates/app-workflows/: Cargo.toml
crates/app-workflows/src/: agent_registry.rs  lib.rs  memory_plan.rs  orchestration_service.rs  orchestrator.rs  ports.rs  scheduler.rs
crates/autoagents-adapter/: Cargo.toml
crates/autoagents-adapter/src/: event_mapping.rs  executor.rs  lib.rs  mcp_bridge.rs  mock_llm.rs  provider_factory.rs  tool_adapter.rs
crates/autoagents-adapter/tests/: durable_tool_loop.rs  provider_http_fixture.rs
docs/: AGENT-PRODUCT-PATH.md
docs/reviews/2026-07-10-portico-desktop/: 01-ipc-contract.md  02-shell-workspace-thread.md  03-agent-runtime-conversation.md  04-security-approval-audit.md  05-tools-terminal-git-worktree.md  06-model-provider-usage.md  07-memory-context-rag.md  08-plugins-skills-mcp.md  09-inspector-browser-desktop-artifact.md  10-automation-subagent-notification.md  11-storage-diagnostics-migrations.md  12-build-release-test-observability.md  13-recovery-roadmap.md  14-closure-ledger.md  15-user-acceptance.md  16-memory-conditioned-multi-agent.md  README.md
docs/superpowers/plans/: 2026-07-07-portico-agent-client-ui-redesign.md
e2e/desktop/: run.mjs
examples/plugins/: README.md  sources.json
examples/plugins/markdown-rich-provider/: README.md  index.html  plugin.json  provider.js
examples/plugins/markdown-viewer-provider/: README.md  UPSTREAM.md  chrome-shim.js  index.html  plugin.json  provider.js  styles.css
scripts/: build-markdown-viewer-plugin.sh  run-desktop-e2e.sh  verify-macos-dmg.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: embedding_setup.rs  error.rs  lib.rs  main.rs  pattern_ports.rs  plugin_github.rs  plugin_package.rs  portico_paths.rs
src-tauri/src/commands/: artifact.rs  automation.rs  background_task.rs  browser.rs  desktop.rs  diagnostics.rs  git.rs  memory.rs  migration.rs  mod.rs  model.rs  notification.rs  orchestrator.rs  plugins.rs  run.rs  secrets.rs  security.rs  terminal.rs  thread.rs  workspace.rs  worktree.rs
src-tauri/tests/: ipc_contract.rs
(+121 files in other folders)
