[workspace]
resolver = "3"

members = [
    "src-tauri",
    "crates/*",
]

default-members = [
    "src-tauri",
    "crates/app-runtime",
    "crates/app-security",
    "crates/app-models",
    "crates/app-tools",
    "crates/app-memory",
    "crates/app-workflows",
    "crates/app-plugins",
    "crates/autoagents-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Portico - Local-first personal desktop agent workbench"
repository = "https://github.com/portico-ai/portico-desktop"
authors = ["Portico Team"]
rust-version = "1.86"

[workspace.dependencies]
# Portico product crates
app-runtime = { path = "crates/app-runtime" }
app-security = { path = "crates/app-security" }
app-models = { path = "crates/app-models" }
app-tools = { path = "crates/app-tools" }
app-memory = { path = "crates/app-memory" }
app-workflows = { path = "crates/app-workflows" }
app-plugins = { path = "crates/app-plugins" }
autoagents-adapter = { path = "crates/autoagents-adapter" }

# AutoAgents dependencies (path relative to portico-desktop -> ../AutoAgents)
autoagents = { path = "../AutoAgents/crates/autoagents", features = ["openai", "anthropic"] }
autoagents-core = { path = "../AutoAgents/crates/autoagents-core" }
autoagents-llm = { path = "../AutoAgents/crates/autoagents-llm", features = ["openai", "anthropic"] }
autoagents-protocol = { path = "../AutoAgents/crates/autoagents-protocol" }
autoagents-derive = { path = "../AutoAgents/crates/autoagents-derive" }
autoagents-guardrails = { path = "../AutoAgents/crates/autoagents-guardrails" }
autoagents-toolkit = { path = "../AutoAgents/crates/autoagents-toolkit" }

# Core ecosystem
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.101"
async-trait = "0.1.89"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde", "clock"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Serialization / schema
ts-rs = { version = "10.1", features = ["chrono-impl", "uuid-impl"] }
schemars = "0.8.19"

# Tauri
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-log = "2.3"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Secrets
keyring = { version = "3", features = ["apple-native"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
