[package]
name = "app-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Memory and persistence abstractions for Portico."

[lints]
workspace = true

[dependencies]
app-models = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
