[package]
name = "app-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Security, permission, and audit abstractions for Portico."

[lints]
workspace = true

[dependencies]
app-models = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
regex = "1"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
