[package]
name = "app-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tool abstractions and permission hooks for Portico."

[lints]
workspace = true

[dependencies]
app-models = { workspace = true }
app-security = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
