[package]
name = "app-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Workflow and orchestration abstractions for Portico."

[lints]
workspace = true

[dependencies]
app-models = { workspace = true }
app-runtime = { workspace = true }
app-security = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cron = "0.15"
serde_json = { workspace = true }
tokio = { workspace = true }
