[package]
name = "autoagents-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Adapter between Portico product runtime and AutoAgents framework internals"

[dependencies]
app-runtime = { workspace = true }
app-models = { workspace = true }
app-security = { workspace = true }
app-tools = { workspace = true }
app-plugins = { workspace = true }
autoagents = { workspace = true }
autoagents-core = { workspace = true }
autoagents-llm = { workspace = true }
autoagents-protocol = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
